# cap-touch-starter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile-build  README.md  lv_demo_conf.h  make.py  sdkconfig.defaults
components/lv_demos/: CMakeLists.txt  Kconfig
main/: CMakeLists.txt  main.cc
pcb/: CapTouchProto.kicad_pcb  CapTouchProto.pro  CapTouchProto.sch  CapTouchStarter.kicad_pcb  CapTouchStarter.kicad_prl  CapTouchStarter.kicad_pro  CapTouchStarter.kicad_sch  CapTouchStarter.pro  CapTouchStarter.sch  README.md  fp-lib-table  sym-lib-table
scripts/: delete-items.py
